data/derived/sp14/progs/unify/prog0549.ml.out
Characters 18-24:
  let _ = backCons ([1; 2] 3);;
                    ^^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
